--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="search_restaurants">Search restaurants</string>
     <string name="search_workmates">Search workmates</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
