- Workmates actionBar title changed - Application dimens for appBar, fabMargin and textMargin added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,17 @@
 <resources>
     <string name="app_name">Go4Lunch</string>
-    <string name="title_maps">Maps</string>
+    <string name="title_maps">Map view</string>
     <string name="title_list_view">List View</string>
     <string name="title_workmates">Workmates</string>
+    <string name="title_workmates_available">Available workmates</string>
     <string name="search">Search</string>
 
     <string name="search_restaurants">Search restaurants</string>
     <string name="search_workmates">Search workmates</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_restaurant_details">Restaurant details</string>
+    <string name="action_settings">Settings</string>
+    <string name="sign_in_with_facebook">Sign in with Facebook</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="logo_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
 </resources>
