--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <!-- Used in NavigationDrawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="facebook_app_id">413607625946696</string>
+    <string name="fb_login_protocol_scheme">fb413607625946696</string>
+    <string name="auth_failed">Authentication failed</string>
 </resources>
