--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,9 @@
     <string name="facebook_app_id">413607625946696</string>
     <string name="fb_login_protocol_scheme">fb413607625946696</string>
     <string name="auth_failed">Authentication failed</string>
+    <string name="api_base_url">https://maps.googleapis.com/</string>
+    <string name="p_api_key">AIzaSyCGcWXfOkzAelP5dgEuDahJ8_fjtNpPzek</string>
+    <string name="p_radius">5000</string>
+    <string name="p_type_restaurant">restaurant</string>
+    <string name="p_type_distance">distance</string>
 </resources>
