--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="p_radius">1000</string>
     <string name="p_type_restaurant">restaurant</string>
     <string name="p_type_distance">distance</string>
+    <string name="loading_text">Loading, please wait…</string>
 </resources>
