--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,6 @@
     <string name="p_type_distance">distance</string>
     <string name="loading_text">Loading, please wait…</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="warning_select_number_of_star">Please select the number of stars before validation</string>
     <string name="restaurant_name">Le Zinc</string>
     <string name="restaurant_address">12 rue du Faubourg Poissonnière</string>
@@ -43,4 +41,7 @@
     <string name="like">Like</string>
     <string name="website">Website</string>
     <string name="restaurant_booked_success">Restaurant booked successfully !</string>
+    <string name="default_notification_channel_id" translatable="false">default_channel</string>
+    <string name="default_notification_channel_name" translatable="true">default channel</string>
+    <string name="notification_title">@string/app_name</string>
 </resources>
