--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="account_created_succcessfully">Your account are created successfully !</string>
     <string name="email_already_used">The email address is already in use by another account</string>
     <string name="new_account_creation_failed">New account creation are failed. Please retry later.</string>
+    <string name="rating_saved">Rating saved successfully.</string>
 </resources>
