Load restaurant details when details activity started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="notification_part2">Your workmates will be present: [%s]</string>
     <string name="status_closed">Closed</string>
     <string name="open_24h">Open 24/7</string>
-    <string name="open_until">Open until</string>
+    <string name="open_until">"Open until "</string>
     <string name="information">Information</string>
     <string name="message_restaurant_is_closed">This restaurant is closed. Please try to book another one.</string>
     <string name="ok" translatable="false">OK</string>
